# airquality

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: pipeline.cfg
doc/: guideline.txt
docs/: guideline.txt
src/: complete_pipeline.py  imputation_analysis.ipynb  imputation_benchmark_pipeline.py  plotting.py  run_imputation_benchmark_notebook.py  training_pipeline.py  training_pipeline_config.py  utils.py
src/airquality/: __init__.py  benchmark.py  config.py  train.py
src/airquality/anomaly/: __init__.py  anomalies.py  benchmark.py  ensemble.py  metrics.py  plot_benchmark_results.py  presentation.py  registry.py  run.py  windowing.py
src/airquality/anomaly/_vendor/: NOTICE  __init__.py  vus_volume.py
src/airquality/anomaly/models/: __init__.py  baselines.py  carla.py  common.py  couta.py  genias.py  lstmad.py  pca_detector.py  prophet_detector.py  tspulse.py
src/airquality/data/: __init__.py  fetch.py  io.py  loaders.py  preprocessing.py  segments.py  series.py  utils.py
src/airquality/forecasting/: __init__.py  backtest.py  cleaning.py  fill.py  pipeline.py
src/airquality/imputation/: __init__.py  benchmark.py  imputers.py  registry.py  run_benchmark.py  tspulse_finetune.py
src/airquality/modeling/: training.py  training_config.py
src/airquality/visualization/: plotting.py
tests/: conftest.py  test_anomaly_benchmark.py  test_benchmark_cli.py  test_benchmark_helpers.py  test_config.py  test_config_helpers.py  test_forecasting_pipeline.py  test_imputers.py  test_loaders_more.py  test_perf_equivalence.py  test_pipeline_utils.py  test_plotting.py  test_preprocessing.py  test_run_imputation_helpers.py  test_train_cli.py  test_training_dataset_bundle.py  test_training_pipeline_config.py  test_training_pipeline_helpers.py  test_tspulse_helpers.py  test_utils.py
