[project]
name = "airquality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "darts[torch]>=0.41.0",
    "hampel>=1.0.2",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "plotnine>=0.15.0",
    "prophet>=1.2.1",
    "pyproject-toml>=0.1.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sktime>=0.38.5",
    "statsmodels>=0.14.5",
    "tabulate>=0.9.0",
]

[tool.uv.workspace]
members = [
    "AIRQUALITY",
]
