[project]
name = "pollution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "darts[torch]>=0.42.1",
    "granite-tsfm>=0.3.4",
    "hampel>=1.0.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.1",
    "numpy>=2.3.5",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "prophet>=1.3.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sktime>=0.40.1",
    "tabulate>=0.9.0",
    "torch==2.7.1+cu118",
    "tqdm>=4.66",
]

[tool.pytest.ini_options]
# Our suite lives in tests/. The vendored `genias/` project ships its own tests
# and its own env, so keep it out of `uv run pytest` at the repo root.
testpaths = ["tests"]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
